--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .header{
     width: 100vw;
-    height: 100vh;
+    height: 550px;
     background-image: url(image/donation13.jpg);
     background-position: bottom;
     background-size: cover;
@@ -11,11 +14,13 @@
 }
 
 .header h1{
-    font-size: 40px;
+    font-size: 66px;
     color:whitesmoke ;
+    margin: 0px;
 }
 .header h3{
     color:whitesmoke ;
+    text-align: center;
 }
 .header .donet-now-btn{
     font-size: 20px;
@@ -23,4 +28,41 @@
     background-color: rgb(14, 231, 68);
     padding: 10px;
     border-radius: 10px;
+}
+.donet-here{
+    margin: 75px;
+    display: flex ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.donet-here h1{
+    font-size: 50px;
+}
+.donet-here p{
+    font-size: 20px;
+    text-align: center;
+}
+.amount{
+    list-style: none;
+    display: flex ;
+    align-items: ;
+    justify-content: center;
+    color: #1e2525;
+    
+}
+
+.amount li{
+    padding: 40px;
+    margin: 10px;
+    background-color: #d8dada;
+}
+#dolar{
+    color: green;
+    border: 2px green solid ;
+    border-radius: 5px;
+}
+.put{
+    width: 400px;
+    text-align: center;
 }
