--- a/another.css
+++ b/another.css
@@ -1,5 +1,4 @@
 *{  
-   
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -19,12 +18,11 @@
 .header h1{
     font-size: 66px;
     color:whitesmoke ;
-    margin: 20px;
+    margin: 0px;
 }
 .header h4{
     color:whitesmoke ;
     text-align: center;
-    margin: 20px;
 }
 .donet-now-btn{
     font-size: 20px;
@@ -42,12 +40,10 @@
 }
 .donet-here h1{
     font-size: 50px;
-    margin: 20px;
 }
 .donet-here p{
     font-size: 20px;
     text-align: center;
-    margin: 20px;
 }
 .amount{
     list-style: none;
@@ -73,19 +69,17 @@
     text-align: center;
     margin-bottom: 20px ;
 }
+
 .work{
     display: flex;
     padding:30px 15px;
     margin: 15px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .common{
     margin: 10px;
     padding:45px 15px;
-}
-.common h1{
-    margin: 10px 0px;
 }
 .food{
     background-color: #f8ebb0;
@@ -97,30 +91,25 @@
     background-color: #fcbdf3;
 }
 
-.midimg{
-    margin: 15px;
-    display: flex;
-    justify-content: space-around;
+/* .upmid{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat; */
+
+.half-width{
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
 }
-.midimg img{
-    max-width: 45vw;
-    
+.half-width img{
+    width: 100%;
 }
-.why{
-    margin: 50px;
-    display: flex ;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.dmid{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 }
-.why h1{
-    text-align: center;
-    padding: 30px;
-}
-.why p{
-    text-align: center;
-    padding: 30px;
-}
+
 .update{
     margin: 50px;
     display: flex ;
@@ -161,4 +150,20 @@ footer h1{
 footer p {
     color: aliceblue;
     margin-top: 55px;
+}
+.midle{
+    display: flex;
+    flex-basis: 30%;
+    background-repeat: no-repeat;
+}
+.im{
+    
+    width:30%;
+    margin-left: 5%;
+    padding-left: 2%;
+
+}
+.im img{
+    width: 100%;
+    height: auto;
 }
